crates/rome_formatter/tests/specs/prettier/js/decorator-comments/comments.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: comments.js

---
# Input
```js
class Something {
    @Annotateme()
    // comment
    static property: Array<string>;
}

```

# Output
```js
class Something {
  @Annotateme()
    // comment
    static property: Array<string>;
}

```

# Errors
```
error[SyntaxError]: return types can only be used in TypeScript files
  ┌─ comments.js:4:20
  │
4 │     static property: Array<string>;
  │                    ^^^^^^^^^^^^^^^ remove this type annotation


```


